# qdrant-multitenant-search-benchmark

./: .gitignore  ARROW_OPTIMIZATION.md  DATASET_LOADING.md  MEMORY_FIX_EXPLANATION.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  РЕШЕНИЕ_ПРОБЛЕМЫ.md
src/benchmark/: __init__.py  cli.py  config.py  dataset.py  metrics.py  qdrant_client_wrapper.py  query_patterns.py  report.py  runner.py
tests/: __init__.py  test_config.py  test_dataset.py  test_metrics.py  test_query_patterns.py
