[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qdrant-multitenant-benchmark"
version = "0.1.0"
description = "Benchmark for comparing multi-tenant approaches in Qdrant"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Benchmark Authors"}
]
dependencies = [
    "qdrant-client>=1.7.0,<1.8.0",
    "numpy>=1.24.0",
    "h5py>=3.8.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
benchmark = "benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
